<resources>
    <string name="app_name">CONiTracking</string>
    <string name="login">login</string>
    <string name="signup">signup</string>
    <string name="Username">Username or Email</string>
    <string name="Password">Password</string>

    <string name="lastname">Last Name</string>
    <string name="firstname">First Name</string>
    <string name="midname">Middle Name</string>
    <string name="age">Age</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="contactno">Contact Number</string>
    <string name="email">Email Address</string>
    <string name="username">Username</string>
    <string name="proceed">Proceed</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="next">Next</string>
</resources>
