<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLogin"
    background="#FFF9C4"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/androidbgplain">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">


            <EditText
                android:id="@+id/usernamelogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:layout_marginBottom="48dp"
                android:ems="10"
                android:textColor="@color/color3"
                android:hint="@string/Username"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/passwordlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="196dp"
                android:ems="10"
                android:hint="@string/Password"
                android:textColor="@color/color3"
                android:inputType="textPassword" />





        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">


        <Button
            android:id="@+id/btn_login"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round"
            android:textSize="20sp"
            android:layout_marginLeft="36dp"
            android:layout_marginBottom="50dp"
            android:textColor="@color/color3"
            android:text="@string/login"

            />
    </LinearLayout>


</android.support.v7.widget.LinearLayoutCompat>